--- a/src/search_page/styles/search_style.css
+++ b/src/search_page/styles/search_style.css
@@ -1,51 +1,63 @@
 .bookshelf-button {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    padding: 10px;
-    background-color: #f0f0f0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .bookshelf-link {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  .bookshelf-link:hover {
-    color: #555;
-  }
-  .navbar {
-    background-color: #b39797;
-    color: white;
-    padding: 10px 20px;
-  }
-  
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  padding: 10px;
+  background-color: #959ea7;
+  color: white;
+  text-decoration: none;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.bookshelf-link {
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+}
+
+.bookshelf-link:hover {
+  color: #555;
+}
+
+.bookshelf-button:hover {
+  background-color: #bcd1e7;
+}
+
+.navbar {
+  background-color: #b39797;
+  color: white;
+  padding: 10px 20px;
+}
+
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 800px;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.searchbar-container {
+  flex: 1;
+  margin-right: 10px;
+}
+
+@media (max-width: 600px) {
   .navbar-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 800px;
-    margin: 0 auto;
+    flex-direction: column;
+    align-items: flex-start;
   }
-  
+
   .searchbar-container {
-    flex: 1;
+    width: 100%;
+    margin: 10px 0;
   }
-  
+
   .bookshelf-button {
-    background-color: #959ea7;
-    color: white;
-    text-decoration: none;
-    padding: 8px 12px;
-    border-radius: 4px;
-    transition: background-color 0.3s;
+    position: static;
+    margin-top: 10px;
   }
-  
-  .bookshelf-button:hover {
-    background-color: #bcd1e7;
-  }
-  
-  
+}
